bugfix: overflow-hidden for background title added

--- a/src/assets/styles/global.less
+++ b/src/assets/styles/global.less
@@ -28,3 +28,7 @@
 .m-auto {
   margin: auto;
 }
+
+.mb-025 {
+  margin-bottom: 0.25rem;
+}
